<resources>
    <string name="app_name">VkrMobile</string>

    <!--Auth-->
    <string name="phoneNumberHint">Введите номер телефона</string>
    <string name="authPasswordHint">Введите пароль</string>
    <string name="registration">Регистрация</string>
    <string name="signIn">Войти</string>
    <string name="authTitle">Авторизация</string>

    <!--Menu-->
    <string name="backHint">Назад</string>

    <!--Toolbar-->
    <string name="toolbarNewsTitle">Новости</string>
    <string name="toolbarProfileTitle">Профиль</string>
    <string name="toolbarCompaniesTitle">Компании</string>
    <string name="toolbarCartsTitle">Корзина</string>
    <string name="toolbarServicesTitle">Мои записи</string>
    <string name="toolbarOrdersTitle">Мои заказы</string>
    <string name="toolbarEmployeeSelectionTitle">Выберите сотрудника</string>
    <string name="toolbarChatsTitle">Чаты</string>

    <!--Company-->
    <string name="companyScorePlaceHolder">Оценка: %1$s / 5</string>

    <!--Profile-->
    <string name="male">Мужской</string>
    <string name="female">Женский</string>
    <string name="none">Не указан</string>
    <string name="nameNumberHint">Введите имя</string>
    <string name="emailPasswordHint">Введите email</string>
    <string name="signOut">Выйти из аккаунта</string>

    <!--Common-->
    <string name="save">Сохранить</string>
    <string name="costPlaceHolder">%1$s руб.</string>

    <!--Product-->
    <string name="addToCart">В корзину</string>
    <string name="makeRequest">Записаться</string>

    <!--Service-->
    <string name="serviceIdPlaceholder">Услуга №%1$s</string>
    <string name="serviceCompanyPlaceholder">Компания: %1$s</string>
    <string name="serviceEmployeePlaceholder">Сотрудник: %1$s</string>
    <string name="serviceEmployeePhoneNumberPlaceholder">Номер сотрудника: %1$s</string>
    <string name="serviceCreateDatePlaceholder">Дата записи: %1$s</string>
    <string name="serviceNamePlaceholder">Услуга: %1$s</string>
    <string name="serviceDurationPlaceholder">Продолжительность: %1$s</string>
    <string name="serviceCostPlaceholder">Цена: %1$s</string>

    <!--Order-->
    <string name="orderButton">Оформить заказ</string>
</resources>
